# bilimusic

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Player.vue  SideMenu.vue
src/pages/: PlayList.vue  Search.vue  Setting.vue
src/store/: index.js
